<resources>
    <string name="app_name">Diploma</string>

    <string name="workers">Сотрудники</string>
    <string name="tasks">Задачи</string>
    <string name="machines">Станки</string>
    <string name="equipment">Оборудование</string>
    <string name="help">Помощь</string>
    <string name="additionally">Дополнительно</string>
    <string name="logoutFromAccount">Выход</string>


    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="back">Назад</string>

    <string name="search">Поиск</string>
    <string name="cancel">Отмена</string>
    <string name="delete">Удалить</string>
    <string name="edit">Редактировать</string>
    <string name="scan">Сканировать</string>
    <string name="generateQR">Сгенерировать QR</string>

    <string name="startWork">Начать работу</string>
    <string name="stopWork">Остановить Работу</string>
    <string name="finishWork">Завершить работу</string>

    <!--  Регистрация и Вход в учетную запись  -->
    <string name="signUp">Зарегистрироваться</string>
    <string name="CreateNewAccount">Создать \nНовый \nАккаунт</string>
    <string name="yourEmail">Email</string>
    <string name="hintEnterEmail">Введите ваш Email</string>
    <string name="yourUsername">Имя</string>
    <string name="hintEnterUsername">Введите ваше имя</string>
    <string name="yourPassword">Пароль</string>
    <string name="hintEnterPassword">Введите пароль</string>
    <string name="yourRepeatPassword">Повторите пароль</string>
    <string name="hintEnterRepeatPassword">Введите пароль ещё раз</string>
    <string name="login">Войти</string>
    <string name="loginToYourAccount">Войдите \nв свой \nАккаунт</string>
    <string name="forgotPassword">Забыли пароль?</string>
    <string name="doNotHaveAccountRegister">Ещё нет Аккаунта? Зарегистрируйтесь</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>