<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eff0fc"
    tools:context=".authentication.SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/top_background" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:srcCompat="@drawable/women1" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:text="@string/CreateNewAccount"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="33sp"
                    app:layout_constraintBottom_toBottomOf="@id/imageView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textYourEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/yourEmail"
                android:textSize="18sp"
                android:textColor="#2f3363"
                android:textStyle="bold"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp" />

            <EditText
                android:id="@+id/emailEt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:ems="10"
                android:padding="8dp"
                android:textColor="#a2a4b5"
                android:textSize="16sp"
                android:hint="@string/hintEnterEmail"
                android:inputType="textPersonName"
                android:background="@drawable/background_edittext" />

            <TextView
                android:id="@+id/usernamePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/yourUsername"
                android:textSize="18sp"
                android:textColor="#2f3363"
                android:textStyle="bold"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp" />

            <EditText
                android:id="@+id/usernameEt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:ems="10"
                android:padding="8dp"
                android:textColor="#a2a4b5"
                android:textSize="16sp"
                android:hint="@string/hintEnterUsername"
                android:background="@drawable/background_edittext" />

            <TextView
                android:id="@+id/textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/yourPassword"
                android:textSize="18sp"
                android:textColor="#2f3363"
                android:textStyle="bold"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp" />

            <EditText
                android:id="@+id/passwordEt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:ems="10"
                android:padding="8dp"
                android:textColor="#a2a4b5"
                android:textSize="16sp"
                android:hint="@string/hintEnterPassword"
                android:inputType="textPassword"
                android:background="@drawable/background_edittext" />

            <TextView
                android:id="@+id/textRepeatPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/yourRepeatPassword"
                android:textSize="18sp"
                android:textColor="#2f3363"
                android:textStyle="bold"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp" />

            <EditText
                android:id="@+id/passwordRepeatEt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:ems="10"
                android:padding="8dp"
                android:textColor="#a2a4b5"
                android:textSize="16sp"
                android:hint="@string/hintEnterRepeatPassword"
                android:inputType="textPassword"
                android:background="@drawable/background_edittext" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signUpBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signUp"
                android:background="@drawable/background_btn_2"
                style="@android:style/Widget.Button"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="32dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:drawableEnd="@drawable/circle"
                android:padding="4dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/noAccountTv"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/login"
                android:textStyle="bold"
                android:background="@drawable/background_btn_1"
                style="@android:style/Widget.Button"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="32dp"
                android:textSize="18sp" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>